# base-bot

./: .gitignore  README.md  docker-compose.yml  mimo-multimodal-platform
.agents/skills/testing-mimo-platform/: SKILL.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  mimo_client.py  models.py
backend/app/routes/: chat.py  code.py  multimodal.py  speech.py  tools.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AudioAnalysis.jsx  ChatPanel.jsx  CodeAssistant.jsx  Dashboard.jsx  ImageAnalysis.jsx  Sidebar.jsx  SummarizeTool.jsx  TextToSpeech.jsx  TranslateTool.jsx
